// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregateResponseType should create an aggregate type with a custom name new test 1`] = `
"type FakeTypeAggregateGroupBy {
  stringField: String
  numberField: Float
  boolField: Boolean
  dateField: DateTime
}

\\"\\"\\"
A date-time string at UTC, such as 2019-12-03T09:54:33Z, compliant with the date-time format.
\\"\\"\\"
scalar DateTime

type FakeTypeCountAggregate {
  stringField: Int
  numberField: Int
  boolField: Int
  dateField: Int
}

type FakeTypeFloatAggregate {
  numberField: Float
}

type FakeTypeMinMaxAggregate {
  stringField: String
  numberField: Float
  dateField: DateTime
}

type CustomPrefixAggregateGroupBy {
  stringField: String
  numberField: Float
  boolField: Boolean
  dateField: DateTime
}

type CustomPrefixCountAggregate {
  stringField: Int
  numberField: Int
  boolField: Int
  dateField: Int
}

type CustomPrefixFloatAggregate {
  numberField: Float
}

type CustomPrefixMinMaxAggregate {
  stringField: String
  numberField: Float
  dateField: DateTime
}

type CustomPrefixAggregateResponse {
  groupBy: CustomPrefixAggregateGroupBy
  count: CustomPrefixCountAggregate
  distinctCount: CustomPrefixCountAggregate
  sum: CustomPrefixFloatAggregate
  avg: CustomPrefixFloatAggregate
  min: CustomPrefixMinMaxAggregate
  max: CustomPrefixMinMaxAggregate
}

\\"\\"\\"Cursor for paging through collections\\"\\"\\"
scalar ConnectionCursor

\\"\\"\\"
Relative date, an Epoch time (number), ISO Date string or a relative date value in the form of \\"last-[N]-[minutes | hours | days | weeks | months | years]\\"
\\"\\"\\"
scalar RelativeDate

type Query {
  aggregate: CustomPrefixAggregateResponse!
}"
`;

exports[`AggregateResponseType should create an aggregate type with the correct fields for each type 1`] = `
"type FakeTypeAggregateGroupBy {
  stringField: String
  numberField: Float
  boolField: Boolean
  dateField: DateTime
}

\\"\\"\\"
A date-time string at UTC, such as 2019-12-03T09:54:33Z, compliant with the date-time format.
\\"\\"\\"
scalar DateTime

type FakeTypeCountAggregate {
  stringField: Int
  numberField: Int
  boolField: Int
  dateField: Int
}

type FakeTypeFloatAggregate {
  numberField: Float
}

type FakeTypeMinMaxAggregate {
  stringField: String
  numberField: Float
  dateField: DateTime
}

type FakeTypeAggregateResponse {
  groupBy: FakeTypeAggregateGroupBy
  count: FakeTypeCountAggregate
  distinctCount: FakeTypeCountAggregate
  sum: FakeTypeFloatAggregate
  avg: FakeTypeFloatAggregate
  min: FakeTypeMinMaxAggregate
  max: FakeTypeMinMaxAggregate
}

\\"\\"\\"Cursor for paging through collections\\"\\"\\"
scalar ConnectionCursor

\\"\\"\\"
Relative date, an Epoch time (number), ISO Date string or a relative date value in the form of \\"last-[N]-[minutes | hours | days | weeks | months | years]\\"
\\"\\"\\"
scalar RelativeDate

type Query {
  aggregate: FakeTypeAggregateResponse!
}"
`;

exports[`AggregateResponseType should return the same class if called multiple times 1`] = `
"type FakeTypeAggregateGroupBy {
  stringField: String
  numberField: Float
  boolField: Boolean
  dateField: DateTime
}

\\"\\"\\"
A date-time string at UTC, such as 2019-12-03T09:54:33Z, compliant with the date-time format.
\\"\\"\\"
scalar DateTime

type FakeTypeCountAggregate {
  stringField: Int
  numberField: Int
  boolField: Int
  dateField: Int
}

type FakeTypeFloatAggregate {
  numberField: Float
}

type FakeTypeMinMaxAggregate {
  stringField: String
  numberField: Float
  dateField: DateTime
}

type FakeTypeAggregateResponse {
  groupBy: FakeTypeAggregateGroupBy
  count: FakeTypeCountAggregate
  distinctCount: FakeTypeCountAggregate
  sum: FakeTypeFloatAggregate
  avg: FakeTypeFloatAggregate
  min: FakeTypeMinMaxAggregate
  max: FakeTypeMinMaxAggregate
}

\\"\\"\\"Cursor for paging through collections\\"\\"\\"
scalar ConnectionCursor

\\"\\"\\"
Relative date, an Epoch time (number), ISO Date string or a relative date value in the form of \\"last-[N]-[minutes | hours | days | weeks | months | years]\\"
\\"\\"\\"
scalar RelativeDate

type Query {
  aggregate: FakeTypeAggregateResponse!
}"
`;
